# SU2

./: .gitignore  .gitmodules  .vimrc  Makefile.am  config_template.cfg  configure.ac  configure_example.sh  meson.build  meson_options.txt
Common/include/: CConfig.hpp  code_config.hpp  config_structure.hpp  config_structure.inl  geometry_structure.hpp  geometry_structure.inl  grid_movement_structure.hpp  grid_movement_structure.inl  linear_solvers_structure.hpp  option_structure.hpp  option_structure.inl  vector_structure.hpp  vector_structure.inl
Common/include/adt/: CADTBaseClass.hpp  CADTElemClass.hpp
Common/include/basic_types/: datatype_structure.hpp
Common/include/fem/: fem_geometry_structure.hpp
Common/include/geometry/: CGeometry.hpp  CMultiGridGeometry.hpp  CPhysicalGeometry.hpp
Common/include/grid_movement/: CSurfaceMovement.hpp
Common/include/linear_algebra/: CPastixWrapper.hpp  CPreconditioner.hpp  CSysMatrix.hpp  CSysMatrix.inl  CSysVector.hpp  blas_structure.hpp  vector_expressions.hpp
Common/include/parallelization/: mpi_structure.cpp  mpi_structure.hpp  omp_structure.cpp  omp_structure.hpp  vectorization.hpp
Common/include/toolboxes/: C1DInterpolation.hpp
Common/lib/: Makefile.am
Common/src/: CConfig.cpp  config_structure.cpp  dual_grid_structure.cpp  geometry_structure.cpp  graph_coloring_structure.cpp  grid_movement_structure.cpp  linear_solvers_structure.cpp  matrix_structure.cpp  meson.build  vector_structure.cpp  wall_model.cpp
Common/src/adt/: CADTElemClass.cpp  CADTPointsOnlyClass.cpp
Common/src/fem/: fem_geometry_structure.cpp  geometry_structure_fem_part.cpp  meson.build
Common/src/geometry/: CDummyGeometry.cpp  CGeometry.cpp  CMultiGridGeometry.cpp  CPhysicalGeometry.cpp
Common/src/geometry/dual_grid/: CPoint.cpp  meson.build
Common/src/geometry/meshreader/: CSU2ASCIIMeshReaderFVM.cpp  meson.build
Common/src/grid_movement/: CSurfaceMovement.cpp  CVolumetricMovement.cpp
Common/src/interface_interpolation/: CInterpolatorFactory.cpp
Common/src/linear_algebra/: CPastixWrapper.cpp  CSysMatrix.cpp  CSysSolve.cpp  CSysSolve_b.cpp  CSysVector.cpp  blas_structure.cpp  meson.build
Common/src/toolboxes/: C1DInterpolation.cpp  meson.build
Common/src/toolboxes/MMS/: meson.build
Doxygen/: Doxyfile
QuickStart/: inv_wedge_HLLC.cfg  mesh_wedge_inv.su2
SU2_CFD/include/: SU2_CFD.hpp  definition_structure.hpp  integration_structure.hpp  iteration_structure.hpp  numerics_structure.hpp  output_structure.hpp  solver_structure.hpp  solver_structure.inl
SU2_CFD/include/drivers/: CDiscAdjSinglezoneDriver.hpp  CDriver.hpp  CMultizoneDriver.hpp  CSinglezoneDriver.hpp
SU2_CFD/include/fluid/: CFluidModel.hpp
SU2_CFD/include/gradients/: computeGradientsGreenGauss.hpp  computeGradientsLeastSquares.hpp
SU2_CFD/include/integration/: CNewtonIntegration.hpp
SU2_CFD/include/interfaces/: CInterface.hpp
SU2_CFD/include/iteration/: CAdjFluidIteration.hpp  CDiscAdjFluidIteration.hpp  CFluidIteration.hpp  (+1 more)
SU2_CFD/src/: SU2_CFD.cpp  definition_structure.cpp  integration_structure.cpp  integration_time.cpp  iteration_structure.cpp  meson.build  numerics_direct_mean.cpp  output_paraview.cpp  output_structure.cpp  output_tecplot.cpp  python_wrapper_structure.cpp  solver_adjoint_levelset.cpp  solver_adjoint_mean.cpp  solver_adjoint_plasma.cpp  solver_adjoint_turbulent.cpp  solver_direct_fea.cpp  solver_direct_levelset.cpp  solver_direct_mean.cpp  solver_direct_plasma.cpp  solver_direct_turbulent.cpp  solver_direct_wave.cpp  solver_structure.cpp
SU2_CFD/src/drivers/: CDiscAdjMultizoneDriver.cpp  CDiscAdjSinglezoneDriver.cpp  CDriver.cpp  CMultizoneDriver.cpp  CSinglezoneDriver.cpp
SU2_CFD/src/fluid/: CFluidModel.cpp  CPengRobinson.cpp
SU2_CFD/src/integration/: CIntegration.cpp  CIntegrationFactory.cpp  CMultiGridIntegration.cpp  CNewtonIntegration.cpp  CSingleGridIntegration.cpp
SU2_CFD/src/interfaces/: CInterface.cpp
SU2_CFD/src/iteration/: CAdjFluidIteration.cpp  CDiscAdjFluidIteration.cpp  CFluidIteration.cpp  CIteration.cpp  CIterationFactory.cpp
SU2_CFD/src/numerics/: CNumerics.cpp  transition.cpp
SU2_CFD/src/numerics/NEMO/: CNEMONumerics.cpp  NEMO_sources.cpp
SU2_CFD/src/numerics/continuous_adjoint/: adj_convection.cpp
SU2_CFD/src/numerics/flow/: flow_diffusion.cpp  flow_sources.cpp
SU2_CFD/src/numerics/flow/convection/: ausm_slau.cpp  centered.cpp  cusp.cpp  fvs.cpp  hllc.cpp  roe.cpp
SU2_CFD/src/numerics/species/: species_sources.cpp
SU2_CFD/src/numerics/turbulent/: nemo_turb_sources.cpp  turb_convection.cpp  turb_sources.cpp
SU2_CFD/src/output/: CAdjFlowIncOutput.cpp  CAdjFlowOutput.cpp  CFlowCompOutput.cpp  CFlowIncOutput.cpp  CFlowOutput.cpp  CNEMOCompOutput.cpp  COutput.cpp  COutputFactory.cpp  output_structure_legacy.cpp
SU2_CFD/src/output/filewriter/: CFVMDataSorter.cpp  CParallelDataSorter.cpp  CParallelFileWriter.cpp  CParaviewFileWriter.cpp  CSurfaceFVMDataSorter.cpp  CTecplotFileWriter.cpp
SU2_CFD/src/solvers/: CAdjEulerSolver.cpp  CAdjNSSolver.cpp  CBaselineSolver.cpp  CBaselineSolver_FEM.cpp  CDiscAdjSolver.cpp  CEulerSolver.cpp  CFEASolver.cpp  CFEM_DG_EulerSolver.cpp  CIncEulerSolver.cpp  CIncNSSolver.cpp  CNEMOEulerSolver.cpp  CNEMONSSolver.cpp  CNEMOTurbSASolver.cpp  CNEMOTurbSolver.cpp  CNSSolver.cpp  CSolver.cpp  CSolverFactory.cpp  CTurbSASolver.cpp  CTurbSSTSolver.cpp  CTurbSolver.cpp
SU2_CFD/src/variables/: CAdjEulerVariable.cpp  CEulerVariable.cpp  CFlowVariable.cpp  CMeshBoundVariable.cpp  CMeshVariable.cpp  CNEMOEulerVariable.cpp  CNSVariable.cpp  CScalarVariable.cpp  CTurbSAVariable.cpp  CTurbSSTVariable.cpp  CVariable.cpp
SU2_DOT/src/: SU2_DOT.cpp
SU2_PY/: SU2_CFD.py  change_version_number.py  mesh_adaptation.py  meson.build  updateHistoryMap.py
SU2_PY/pySU2/: meson.build  pySU2.i  pySU2ad.i
SU2_SOL/include/: SU2_SOL.hpp
SU2_SOL/src/: SU2_SOL.cpp
TestCases/: hybrid_regression.py  hybrid_regression_AD.py  parallel_regression.py  parallel_regression_AD.py  serial_regression.py  serial_regression_AD.py  tutorials.py
legacy/: configure.ac
meson_scripts/: init.py
(+107 files in other folders)
