# SU^2 global Makefile.am
# Stanford University Aerospace Design Lab
#
# Created: 		10/26/12
# Last updated: 	3/16/13
#
# Created by: 		M. Colonno
# Updated by: 		M. Colonno
# Updated by:       T. Lukaczyk 4/4/2013
#
##########################

# AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

SUBDIRS = Common/lib 

if BUILD_CFD
SUBDIRS +=SU2_CFD/obj
endif
