option('with-mpi',   type : 'feature', value : 'auto', description: 'enable MPI support')
option('with-omp',   type : 'boolean', value : false, description: 'enable OpenMP support')
option('enable-normal',  type : 'boolean', value : true, description: 'enable normal build')
option('custom-mpi',  type : 'boolean', value : false, description: 'enable MPI assuming the compiler and/or env vars give the correct include dirs and linker args.')
