common_src += files(['CInviscidVortexSolution.cpp',
           'CRinglebSolution.cpp',
           'CMMSNSTwoHalfSpheresSolution.cpp',
           'CNSUnitQuadSolution.cpp',
           'CMMSNSUnitQuadSolution.cpp',
           'CMMSNSTwoHalfCirclesSolution.cpp',
           'CTGVSolution.cpp',
           'CMMSNSUnitQuadSolutionWallBC.cpp',
           'CVerificationSolution.cpp',
           'CUserDefinedSolution.cpp'])
